@@ -23,6 +23,7 @@ TECH
 NON-TECH
    *. Cached channel messages
    *. Fighter - Weapons Training (or Karate Training for Monks) -- non-kill way to gain xp, makes mobs slightly harder, 1 level up max.
+   *. Fighter -- AUTOGUARD can start a little "Guarding" prog for, say, 10 rl minutes.
    *. Make it easier to store containers of items in bank.  Like a deposit box or something.
    *. A fireball type chant for Delvers or something, like Magma Cannon or Core Spike.
    *. Transcribe -as a spell, allowing a mage to transcribe a spell from one scroll to another scroll.
