@@ -227,6 +227,18 @@ Short(s): \n\r\
 A command for showing items in a room or area, and how they \
 deviate from established norms for their type and level.
 	
+EVERY=\
+Command : EVERY\n\r\
+Usage   : EVERY [ROOM/ITEM/MOB/EXIT] (INAREA/INWORLD) (+PLAYERS) (<MASK>[ZAPPERMASK]</MASK>) [COMMAND]\n\r\
+Example : every room inarea look\n\r\
+Example : every mob cast tourettes *\n\r\
+Short(s): \n\r\
+This command allows you to execute a command against every room, item, mob, or exit in the same room \
+as the Archon.  The name of the target can be substituted in your command with an asterisk *.  The \
+INAREA or INWORLD flag may be given to expand the rooms affected.  The +PLAYERS flag will include players \
+when the MOB argument is given.  A ZapperMask may be placed between <MASK> and </MASK> strings to filter \
+out the type of mob/item affected; see HELP ZAPPERMASK for more information on that.
+
 EXPIRE=\
 Command : EXPIRE\n\r\
 Usage   : EXPIRE [PLAYERNAME] ([NEW DAYS REMAINING]) \n\r\
